<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_QuanLyThuChi"
            android:icon="@mipmap/menu"
            android:title="@string/menu_QuanLyThuChi" />
        <item
            android:id="@+id/nav_QuanLyVi"
            android:icon="@mipmap/menu"
            android:title="@string/menu_QuanLyVi" />
        <item
            android:id="@+id/nav_QuanLyTaiKhoan"
            android:icon="@mipmap/menu"
            android:title="@string/menu_QuanLyTaiKhoan" />
        <item
            android:id="@+id/nav_QuanLyDanhMucThuChi"
            android:icon="@mipmap/menu"
            android:title="@string/menu_QuanLyNhomThuChi" />
        <item
            android:id="@+id/nav_KeHoachTietKiem"
            android:icon="@mipmap/menu"
            android:title="Kế hoạch tiết kiệm" />
        <item
            android:id="@+id/nav_ThongKeThuChi"
            android:icon="@mipmap/menu"
            android:title="Thống kê thu chi" />
    </group>

</menu>
