<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_QuanLyThuChi">

    <fragment
        android:id="@+id/nav_QuanLyNhomThuChi"
        android:name="com.example.doantotnghiep.ui.QuanLyNhomThuChi.QuanLyNhomThuChiFragment"
        tools:layout="@layout/fragment_quanlynhomthuchi" />
    <fragment
        android:id="@+id/nav_QuanLyThuChi"
        android:name="com.example.doantotnghiep.ui.QuanLyThuChi.QuanLyThuChiFragment"
        android:label="@string/menu_QuanLyThuChi"
        tools:layout="@layout/fragment_quanlythuchi" />

    <fragment
        android:id="@+id/nav_QuanLyVi"
        android:name="com.example.doantotnghiep.ui.QuanLyVi.QuanLyViFragment"
        android:label="@string/menu_QuanLyVi"
        tools:layout="@layout/fragment_quanlyvi" />

    <fragment
        android:id="@+id/nav_QuanLyTaiKhoan"
        android:name="com.example.doantotnghiep.ui.QuanLyTaiKhoan.QuanLyTaiKhoanFragment"
        android:label="@string/menu_QuanLyTaiKhoan"
        tools:layout="@layout/fragment_quanlytaikhoan" />

</navigation>