<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_fragment"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:background="@drawable/main_background"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/txtTendangnhapdangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tendangnhap"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txtNhaptendangnhapdangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext" />

            <TextView
                android:id="@+id/txtMatkhaudangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/matkhau"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txtNhapmatkhaudangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtMasodangky"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mabimat"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtLuuydangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luuy"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txtNhapmasodangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnXoatrangdangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/main_button"
            android:ems="6"
            android:onClick="xoatrang"
            android:text="@string/xoatrang" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDangkydangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/confirm_button"
                android:ems="9"
                android:onClick="dangky"
                android:text="@string/dangky" />

            <Button
                android:id="@+id/btnHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/cancel_button"
                android:ems="9"
                android:onClick="huy"
                android:text="Hủy" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>