<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background_fragment">

            <ImageView
                android:id="@+id/imgLogo1"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/logo_iuh" />
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:id="@+id/layoutDangnhap"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_gravity="center"
                android:layout_margin="13dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_background"
                    android:padding="12dp"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtTendangnhapmain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tên tài khoản"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editText_TenTaiKhoanDangNhap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_span="2"
                            android:background="@drawable/main_edittext"
                            android:drawableLeft="@mipmap/user_icon"
                            android:drawablePadding="3dp"
                            android:hint="Nhập tên tài khoản"
                            android:singleLine="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtMatkhaumain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/matkhau"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editText_MatKhauDangNhap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_span="2"
                            android:background="@drawable/main_edittext"
                            android:drawableLeft="@mipmap/password_icon"
                            android:drawablePadding="3dp"
                            android:inputType="textPassword"
                            android:hint="Nhập mật khẩu"
                            android:singleLine="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/checkBox_GhiNho"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_span="2"
                            android:text="Lưu mật khẩu"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <Button
                            android:id="@+id/btnDangnhapmain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/confirm_button"
                            android:ems="10"
                            android:onClick="DangNhap"
                            android:text="@string/dangnhap"
                            android:textStyle="bold"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btnDangkymain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:gravity="left|center_vertical"
                                android:onClick="DangKyTaiKhoan"
                                android:text="@string/dangky"
                                android:textColor="#000000" />

                            <Button
                                android:id="@+id/btnQuenmatkhaumain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:gravity="right|center_vertical"
                                android:onClick="QuenMatKhau"
                                android:text="@string/quenmatkhau"
                                android:textColor="#000000" />
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>